--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <!-- Panel de login -->  
 
 <!-- Cuadro clickeable debajo del título (oculto hasta login) -->  
-<div id="toggleButton" style="display:none;">Ver Actualizaciones y Créditos</div>  
+<div id="toggleButton">Ver Actualizaciones y Créditos</div>  
 
 <!-- Sección de créditos / actualizaciones (oculto hasta login) -->  
 <div id="creditsSection">  
