--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </div>  
 
 <!-- Grid de juegos (oculto hasta login) -->  
-<div class="grid" id="gameGrid" style="display:none;">  
+<div class="grid" id="gameGrid">  
   <!-- todos los juegos aquí -->  
   <div class="game">  
     <a href="Slope-Source-code-main/index.html">  
