--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
     </a> 
    </div>  
   <div class="game">  
-    <a href="8BallPool/index.html">  
-      <img src="8BallPool/unnamed.png" alt="8 Ball Pool" />  
-      <div class="game-title">8 Ball Pool</div>  
+    <a href="BobTheRobber/bob-the-robber.html">  
+      <img src="BobTheRobber/download.jpg" alt="Bob The Robber" />  
+      <div class="game-title">Bob The Robber</div>  
     </a>  
   </div>  
   <div class="game">  
