--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@
       <img src="DogeMiner/favicon.ico" alt="Doge Miner Tycoon" />  
       <div class="game-title">Doge Miner Tycoon</div>  
     </a>  
+   </div>  
+  <div class="game">  
+    <a href="Vex/vex.html">  
+      <img src="Vex7/assets/icon.png" alt="Vex 7" />  
+      <div class="game-title">Vex 7</div>  
+    </a>  
   </div>  
   <div class="game">  
     <a href="snowrider3d/index.html">  
