--- a/Vex/vex.html
+++ b/Vex/vex.html
@@ -1,251 +1,225 @@
-.bob-the-robber-container {
-  width: 100%;
-  display: flex;
-  overflow: auto;
-  min-height: 100vh;
-  align-items: center;
-  flex-direction: column;
-  background-size: cover;
-  justify-content: flex-start;
-  background-image: url("public/playground_assets/wallpaperflare.com_wallpaper%20%5B4%5D-1500w.jpg");
-}
-.bob-the-robber-navbar-interactive {
-  width: 100%;
-  display: flex;
-  position: relative;
-  align-items: center;
-  padding-top: 0px;
-  padding-left: var(--dl-space-space-threeunits);
-  padding-right: var(--dl-space-space-threeunits);
-  padding-bottom: 0px;
-  justify-content: space-between;
-}
-.bob-the-robber-navlink {
-  display: contents;
-}
-.bob-the-robber-logo {
-  width: 10%;
-  height: 10%;
-  text-decoration: none;
-}
-.bob-the-robber-desktop-menu {
-  display: flex;
-  position: relative;
-}
-.bob-the-robber-nav {
-  flex: 1;
-  color: var(--dl-color-gray-black);
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-self: center;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-}
-.bob-the-robber-navlink01 {
-  font-size: 25px;
-  text-align: center;
-  text-decoration: none;
-}
-.bob-the-robber-navlink02 {
-  font-size: 25px;
-  margin-left: var(--dl-space-space-twounits);
-  text-decoration: none;
-}
-.bob-the-robber-navlink03 {
-  font-size: 25px;
-  margin-left: var(--dl-space-space-twounits);
-  text-decoration: none;
-}
-.bob-the-robber-navlink04 {
-  font-size: 25px;
-  margin-left: var(--dl-space-space-twounits);
-  text-decoration: none;
-}
-.bob-the-robber-navlink05 {
-  font-size: 25px;
-  margin-left: var(--dl-space-space-twounits);
-  text-decoration: none;
-}
-.bob-the-robber-navlink06 {
-  font-size: 25px;
-  margin-left: var(--dl-space-space-twounits);
-  text-decoration: none;
-}
-.bob-the-robber-navlink07 {
-  font-size: 25px;
-  margin-left: var(--dl-space-space-twounits);
-  text-decoration: none;
-}
-.bob-the-robber-btn-group {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.bob-the-robber-link {
-  display: contents;
-}
-.bob-the-robber-image {
-  width: 100px;
-  object-fit: cover;
-  text-decoration: none;
-}
-.bob-the-robber-burger-menu {
-  display: none;
-  align-items: center;
-  justify-content: center;
-}
-.bob-the-robber-icon {
-  width: var(--dl-size-size-xsmall);
-  height: var(--dl-size-size-xsmall);
-}
-.bob-the-robber-mobile-menu {
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  padding: 32px;
-  z-index: 100;
-  position: fixed;
-  transform: translateX(100%);
-  transition: 0.5s;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: #fff;
-}
-.bob-the-robber-nav1 {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-}
-.bob-the-robber-container1 {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  margin-bottom: var(--dl-space-space-threeunits);
-  justify-content: space-between;
-}
-.bob-the-robber-navlink08 {
-  display: contents;
-}
-.bob-the-robber-image1 {
-  height: 2rem;
-  text-decoration: none;
-}
-.bob-the-robber-menu-close {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.bob-the-robber-icon2 {
-  width: var(--dl-size-size-xsmall);
-  height: var(--dl-size-size-xsmall);
-}
-.bob-the-robber-nav2 {
-  flex: 0 0 auto;
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-}
-.bob-the-robber-navlink09 {
-  margin-bottom: var(--dl-space-space-unit);
-  text-decoration: none;
-}
-.bob-the-robber-navlink10 {
-  margin-bottom: var(--dl-space-space-unit);
-  text-decoration: none;
-}
-.bob-the-robber-navlink11 {
-  margin-bottom: var(--dl-space-space-unit);
-  text-decoration: none;
-}
-.bob-the-robber-navlink12 {
-  margin-bottom: var(--dl-space-space-unit);
-  text-decoration: none;
-}
-.bob-the-robber-navlink13 {
-  margin-bottom: var(--dl-space-space-unit);
-  text-decoration: none;
-}
-.bob-the-robber-link1 {
-  margin-bottom: var(--dl-space-space-unit);
-  text-decoration: none;
-}
-.bob-the-robber-link2 {
-  margin-bottom: var(--dl-space-space-unit);
-  text-decoration: none;
-}
-.bob-the-robber-link3 {
-  margin-bottom: var(--dl-space-space-unit);
-  text-decoration: none;
-}
-.bob-the-robber-icon-group {
-  border: 2px dashed rgba(120, 120, 120, 0.4);
-  display: flex;
-}
-.bob-the-robber-div {
-  width: 1440px;
-  height: 910px;
-  align-self: center;
-}
-@media(max-width: 767px) {
-  .bob-the-robber-navbar-interactive {
-    padding-left: var(--dl-space-space-twounits);
-    padding-right: var(--dl-space-space-twounits);
-  }
-  .bob-the-robber-desktop-menu {
-    display: none;
-  }
-  .bob-the-robber-navlink02 {
-    margin-left: var(--dl-space-space-unit);
-  }
-  .bob-the-robber-navlink03 {
-    margin-left: var(--dl-space-space-unit);
-  }
-  .bob-the-robber-navlink04 {
-    margin-left: var(--dl-space-space-unit);
-  }
-  .bob-the-robber-navlink05 {
-    margin-left: var(--dl-space-space-unit);
-  }
-  .bob-the-robber-navlink06 {
-    margin-left: var(--dl-space-space-unit);
-  }
-  .bob-the-robber-navlink07 {
-    margin-left: var(--dl-space-space-unit);
-  }
-  .bob-the-robber-btn-group {
-    display: none;
-  }
-  .bob-the-robber-burger-menu {
-    display: flex;
-  }
-  .bob-the-robber-link1 {
-    text-decoration: none;
-  }
-  .bob-the-robber-link2 {
-    text-decoration: none;
-  }
-  .bob-the-robber-link3 {
-    text-decoration: none;
-  }
-}
-@media(max-width: 479px) {
-  .bob-the-robber-navbar-interactive {
-    padding: var(--dl-space-space-unit);
-  }
-  .bob-the-robber-logo {
-    width: 15%;
-    height: 15%;
-  }
-  .bob-the-robber-icon {
-    width: 55px;
-    height: 55px;
-  }
-  .bob-the-robber-mobile-menu {
-    padding: 16px;
-  }
-}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Vex - WIP</title>
+    <meta
+      name="description"
+      content="This is WIP, my unblocked game site. Come Play!"
+    />
+    <meta property="og:title" content="Vex - WIP" />
+    <meta
+      property="og:description"
+      content="This is WIP, my unblocked game site. Come Play!"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta property="twitter:card" content="summary_large_image" />
+
+    <style data-tag="reset-style-sheet">
+      html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6,figure,blockquote,figcaption {  margin: 0;  padding: 0;}button {  background-color: transparent;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }
+    </style>
+    <style data-tag="default-style-sheet">
+      html {
+        font-family: Source Sans Pro;
+        font-size: 16px;
+      }
+
+      body {
+        font-weight: 400;
+        font-style:normal;
+        text-decoration: none;
+        text-transform: none;
+        letter-spacing: normal;
+        line-height: 1.15;
+        color: var(--dl-color-gray-black);
+        background-color: var(--dl-color-gray-white);
+
+      }
+    </style>
+    <link
+      rel="shortcut icon"
+      href="public/playground_assets/screenshot_2023-05-13_10.49.15_pm-removebg-preview.png"
+      type="icon/png"
+      sizes="32x32"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&amp;display=swap"
+      data-tag="font"
+    />
+
+    <style data-section-id="dropdown">
+      [data-thq="thq-dropdown"]:hover > [data-thq="thq-dropdown-list"] {
+          display: flex;
+        }
+
+        [data-thq="thq-dropdown"]:hover > div [data-thq="thq-dropdown-arrow"] {
+          transform: rotate(90deg);
+        }
+    </style>
+    <link rel="stylesheet" href="./style.css" />
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script>
+      ScrollReveal({ reset: true });
+    </script>
+  </head>
+  <body>
+    <div>
+      <script
+        type="text/javascript"
+        src="https://unpkg.com/dangerous-html@0.1.12/dist/default/lib.umd.js"
+      ></script>
+      <link href="./vex.css" rel="stylesheet" />
+
+      <div class="vex-container">
+        <header data-thq="thq-navbar" class="vex-navbar-interactive">
+          <a href="index.html" class="vex-navlink">
+            <img
+              alt="logo"
+              src="public/playground_assets/images-removebg-preview2-200h.png"
+              class="vex-logo"
+            />
+          </a>
+          <div
+            data-thq="thq-navbar-nav"
+            data-role="Nav"
+            class="vex-desktop-menu"
+          >
+            <nav
+              data-thq="thq-navbar-nav-links"
+              data-role="Nav"
+              class="vex-nav"
+            >
+              <a href="flash-games.html" class="vex-navlink01">
+                <span>Flash</span>
+                <br />
+              </a>
+              <a href="gameboy-games.html" class="vex-navlink02">Gameboy</a>
+              <a href="proxies.html" class="vex-navlink03">Proxies</a>
+              <a href="interstellar-movies.html" class="vex-navlink04">
+                Movies
+              </a>
+              <a href="guides.html" class="vex-navlink05">Guides</a>
+              <a href="credits.html" class="vex-navlink06">Credits</a>
+              <a href="guides.html" class="vex-navlink07"></a>
+            </nav>
+          </div>
+          <div data-thq="thq-navbar-btn-group" class="vex-btn-group">
+            <a
+              href="https://discord.gg/62PsHFFQHm"
+              target="_blank"
+              rel="noreferrer noopener"
+              class="vex-link"
+            >
+              <img
+                alt="image"
+                src="public/playground_assets/636e0a6cc3c481a15a141738_icon_clyde_white_rgb-200h.png"
+                class="vex-image"
+              />
+            </a>
+          </div>
+          <div data-thq="thq-burger-menu" class="vex-burger-menu">
+            <svg viewBox="0 0 1024 1024" class="vex-icon">
+              <path
+                d="M128 554.667h768c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-768c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667zM128 298.667h768c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-768c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667zM128 810.667h768c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-768c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667z"
+              ></path>
+            </svg>
+          </div>
+          <div data-thq="thq-mobile-menu" class="vex-mobile-menu">
+            <div
+              data-thq="thq-mobile-menu-nav"
+              data-role="Nav"
+              class="vex-nav1"
+            >
+              <div class="vex-container1">
+                <a href="index.html" class="vex-navlink08">
+                  <img
+                    alt="image"
+                    src="public/playground_assets/images-removebg-preview2-200h.png"
+                    class="vex-image1"
+                  />
+                </a>
+                <div data-thq="thq-close-menu" class="vex-menu-close">
+                  <svg viewBox="0 0 1024 1024" class="vex-icon2">
+                    <path
+                      d="M810 274l-238 238 238 238-60 60-238-238-238 238-60-60 238-238-238-238 60-60 238 238 238-238z"
+                    ></path>
+                  </svg>
+                </div>
+              </div>
+              <nav
+                data-thq="thq-mobile-menu-nav-links"
+                data-role="Nav"
+                class="vex-nav2"
+              >
+                <a href="flash-games.html" class="vex-navlink09">Flash Games</a>
+                <a href="gameboy-games.html" class="vex-navlink10">
+                  Gameboy Games
+                </a>
+                <a href="proxies.html" class="vex-navlink11">Proxies</a>
+                <a href="proxies.html" class="vex-navlink12">Proxies</a>
+                <a href="guides.html" class="vex-navlink13">Guides</a>
+                <a
+                  href="https://discord.gg/62PsHFFQHm"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="vex-link1"
+                >
+                  WIP Discord
+                </a>
+                <a
+                  href="https://discord.gg/62PsHFFQHm"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="vex-link2"
+                >
+                  WIP Discord
+                </a>
+                <a
+                  href="https://discord.gg/62PsHFFQHm"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="vex-link3"
+                >
+                  WIP Discord
+                </a>
+              </nav>
+            </div>
+            <div class="vex-icon-group"></div>
+          </div>
+        </header>
+        <div class="vex-div">
+          <dangerous-html
+            html="<script src='https://garage-56.github.io/test42/ruffle/ruffle.js'></script>
+<div class='swf'dir='ltr' style='text-align: left;' trbidi='on'>
+        <embed height='910' pluginspage=' http://www.macromedia.com/go/getflashplayer' src='https://garage-56.github.io/Garage-56/vex.swf' type='application/x-shockwave-flash' width='1440'></embed>
+</div>
+"
+          ></dangerous-html>
+        </div>
+      </div>
+    </div>
+    <script
+      type="text/javascript"
+      src="https://www.googletagmanager.com/gtag/js?id=G-3JZWTEPZXN"
+      async=""
+    ></script>
+    <script type="text/javascript">
+      window.dataLayer = window.dataLayer || [];
+              function gtag(){dataLayer.push(arguments);}
+              gtag('js', new Date());
+              gtag('config', 'G-3JZWTEPZXN');
+    </script>
+    <script type="text/javascript">
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+              new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+              j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+              'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+              })(window,document,'script','dataLayer','GTM-KCNV8W8');
+    </script>
+    <script
+      data-section-id="navbar"
+      src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
+    ></script>
+  </body>
+</html>
