--- a/index.html
+++ b/index.html
@@ -4,127 +4,191 @@
 <meta charset="UTF-8" />  
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>  
 <title>CELEX - Juegos</title>  
+<!-- Fuentes modernas -->  
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@400;600&display=swap" rel="stylesheet">  
+
 <style>  
+  /* Reset y base */  
   * {  
     box-sizing: border-box;  
-  }  
-  
-  body {  
     margin: 0;  
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-    background: radial-gradient(#000000, #0f0f0f);  
-    color: white;  
-    background-image: url("super-moon-full-moon-stars-cosmos-clouds-5k-8k-3840x2160-6182.jpg");  
-    background-size: cover;  
-    background-attachment: fixed;  
-    background-repeat: no-repeat;  
+    padding: 0;  
+  }  
+  body {  
+    font-family: 'Montserrat', 'Raleway', sans-serif;  
+    background: linear-gradient(135deg, #000, #1a1a1a);  
+    color: #fff;  
     position: relative;  
-    z-index: 0;  
+    min-height: 100vh;  
+    overflow-x: hidden;  
   }  
 
+  /* Fondo con efecto blurred y animado */  
   body::before {  
     content: "";  
     position: fixed;  
     inset: 0;  
+    background-image: url("super-moon-full-moon-stars-cosmos-clouds-5k-8k-3840x2160-6182.jpg");  
     background-size: cover;  
-    background-position: center;  
-    background-repeat: no-repeat;  
-    filter: brightness(0.3) blur(1px);  
+    filter: brightness(0.3) blur(3px);  
     z-index: -1;  
   }  
 
-  h1 {  
-    text-align: center;  
-    margin: 30px 0 10px 0;  
-    font-size: 3em;  
-    color: white;  
-    text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px #00fff2;  
-  }  
+  /* Encabezado */  
+h1 {  
+  text-align: center;  
+  padding: 30px 20px 10px 20px;  
+  font-size: 3em;  
+  font-family: 'Raleway', sans-serif;  
+  text-shadow: 0 0 15px #00fff2, 0 0 30px #00fff2;  
+  color: #fff;  
+  position: relative;  
+}  
 
-  #toggleButton {  
-    width: 250px;  
-    height: 50px;  
-    margin: 20px auto;  
-    background: rgba(255,255,255,0.1);  
-    border-radius: 10px;  
-    box-shadow: 0 0 20px #ffffff, 0 0 40px #ffffff inset;  
-    display: flex;  
-    align-items: center;  
-    justify-content: center;  
-    cursor: pointer;  
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-    font-weight: bold;  
-    font-size: 1.2em;  
-    color: #fff;  
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff;  
-    transition: all 0.3s ease;  
-  }  
+/* Panel de login y bienvenida */  
+#authContainer {  
+  max-width: 400px;  
+  margin: auto;  
+  padding: 15px;  
+  background: rgba(255,255,255,0.05);  
+  border-radius: 15px;  
+  box-shadow: 0 0 20px #00fff2aa;  
+  margin-bottom: 30px;  
+  transition: all 0.3s ease;  
+}  
 
-  #creditsSection {  
-    display: none;  
-    text-align: center;  
-    padding: 20px;  
-    max-width: 800px;  
-    margin: auto;  
-    border-radius: 10px;  
-    background: rgba(255,255,255,0.05);  
-    box-shadow: 0 0 20px #ffffff inset;  
-    color: #fff;  
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff;  
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-    font-size: 1.2em;  
-  }  
+/* Input y botones */  
+input[type="text"], input[type="password"] {  
+  width: 100%;  
+  padding: 12px 15px;  
+  margin: 10px 0;  
+  border: none;  
+  border-radius: 8px;  
+  font-family: 'Montserrat', sans-serif;  
+  font-size: 1em;  
+}  
 
-  .grid {  
-    display: grid;  
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));  
-    gap: 25px;  
-    padding: 20px;  
-    max-width: 1200px;  
-    margin: auto;  
-  }  
+button {  
+  width: 100%;  
+  padding: 12px;  
+  background: #00fff2;  
+  color: #000;  
+  border: none;  
+  border-radius: 8px;  
+  font-weight: 600;  
+  font-family: 'Montserrat', sans-serif;  
+  font-size: 1.1em;  
+  cursor: pointer;  
+  margin-top: 15px;  
+  transition: background 0.3s ease;  
+}  
+button:hover {  
+  background: #00cccc;  
+}  
 
-  .game {  
-    background: rgba(255, 255, 255, 0.05);  
-    border-radius: 15px;  
-    overflow: hidden;  
-    text-align: center;  
-    box-shadow: 0 0 15px #00fff255;  
-    transition: transform 0.2s, box-shadow 0.2s;  
-    height: 180px;  
-    display: flex;  
-    flex-direction: column;  
-    justify-content: center;  
-  }  
+/* Icono de usuario en esquina superior derecha */  
+#userIcon {  
+  position: fixed;  
+  top: 20px;  
+  right: 20px;  
+  width: 60px;  
+  height: 60px;  
+  background: #00fff2;  
+  border-radius: 50%;  
+  display: flex;  
+  align-items: center;  
+  justify-content: center;  
+  cursor: pointer;  
+  box-shadow: 0 0 20px #00fff2aa;  
+  font-size: 1.5em;  
+  font-weight: bold;  
+  color: #000;  
+  user-select: none;  
+  transition: all 0.3s ease;  
+}  
+#userIcon:hover {  
+  box-shadow: 0 0 30px #00fff2;  
+}  
 
-  .game:hover {  
-    transform: scale(1.05);  
-    box-shadow: 0 0 25px #00fff2aa;  
-  }  
+/* Contenido de info de usuario, al clicquear icono */  
+#userInfo {  
+  position: fixed;  
+  top: 90px;  
+  right: 20px;  
+  background: rgba(0, 0, 0, 0.8);  
+  padding: 15px;  
+  border-radius: 12px;  
+  display: none;  
+  min-width: 200px;  
+  box-shadow: 0 0 20px #00fff2aa;  
+  font-family: 'Montserrat', sans-serif;  
+  font-size: 0.9em;  
+  color: #fff;  
+  z-index: 999;  
+}  
 
-  .game img {  
-    width: 80%;  
-    height: 120px;  
-    object-fit: cover;  
-    border-bottom: 2px solid #00fff2;  
-    margin: 0 auto;  
-  }  
+/* Estilo para la sección de juegos (visible solo si usuario autenticado) */  
+#gameGrid {  
+  display: none;  
+  max-width: 1200px;  
+  margin: 20px auto;  
+  padding: 20px;  
+  display: grid;  
+  grid-template-columns: repeat(auto-fit, minmax(150px,1fr));  
+  gap: 25px;  
+}  
 
-  .game-title {  
-    font-size: 1em;  
-    padding: 8px;  
-    color: white;  
-    text-shadow: 0 0 5px #00fff2;  
-  }  
+/* Anime para los juegos */  
+.game {  
+  background: rgba(255,255,255,0.05);  
+  border-radius: 15px;  
+  overflow: hidden;  
+  height: 180px;  
+  display: flex;  
+  flex-direction: column;  
+  align-items: center;  
+  justify-content: center;  
+  cursor: pointer;  
+  transition: transform 0.2s, box-shadow 0.2s;  
+}  
+.game:hover {  
+  transform: scale(1.05);  
+  box-shadow: 0 0 25px #00fff2aa;  
+}  
+.game img {  
+  width: 80%;  
+  height: 120px;  
+  object-fit: cover;  
+  border-bottom: 2px solid #00fff2;  
+}  
+.game-title {  
+  margin-top: 8px;  
+  font-size: 1em;  
+  color: white;  
+  text-shadow: 0 0 5px #00fff2;  
+}  
 
-  a {  
-    color: white;  
-    text-decoration: none;  
-  }  
+/* Search bar opcional si deseas */  
+#searchContainer {  
+  max-width: 600px;  
+  margin: 20px auto;  
+  display: flex;  
+  justify-content: center;  
+}  
+#searchContainer input {  
+  width: 100%;  
+  max-width: 300px;  
+  padding: 10px 15px;  
+  border-radius: 8px;  
+  border: none;  
+  font-family: 'Montserrat', sans-serif;  
+  font-size: 1em;  
+}  
 
-  a:hover {  
-    text-decoration: underline;  
-  }  
+/* Animación suave */  
+.transition {  
+  transition: all 0.3s ease;  
+}  
 </style>  
 </head>  
 <body>  
@@ -132,34 +196,37 @@
 <h1>CELEX - Juegos</h1>  
 
 <!-- Panel de login -->  
-
-<!-- Cuadro clickeable debajo del título (oculto hasta login) -->  
-<div id="toggleButton">Ver Actualizaciones y Créditos</div>  
-
-<!-- Sección de créditos / actualizaciones (oculto hasta login) -->  
-<div id="creditsSection">  
-  <h2 style="text-shadow: 0 0 10px #fff, 0 0 20px #fff;">Créditos</h2>  
-  <p>El creador: El mendez</p>  
-  <p>El Ideas: El alfon</p>  
-  <p>Actualizaciones:</p>  
-  <p>Se ha eliminado 1v1.lol por el puto iRiS</p>  
-  <p>Se ha Borrado Tunnel Rush</p>  
-  <p>e añadido World Hardest Game quien se lo pase todo un 1 euro, VIVA VOX SANCHEZ MUERTO</p>  
-  <p>E añadido CSGO y que?? iRiS DIMISON vIVA VOX</p>  
-  <p>a ve tambien los backrooms rojo muerto abono pa mi huerto VIVA VOX</p>  
-  <p>illo otro mas el mierda este Doge Miner es la ostia probarlo es un tycoon los muertos de pedro sanchez.</p>  
+<div id="authContainer">  
+  <h2 style="text-align:center; margin-bottom:10px;">Iniciar Sesión</h2>  
+  <input type="text" id="userInput" placeholder="Usuario" />  
+  <input type="password" id="keyInput" placeholder="Clave" />  
+  <button id="loginBtn">Entrar</button>  
+  <div id="loginMessage" style="margin-top:10px; text-align:center; color:#ff5555;"></div>  
 </div>  
 
-<!-- Grid de juegos (oculto hasta login) -->  
-<div class="grid" id="gameGrid">  
-  <!-- todos los juegos aquí -->  
-  <div class="game">  
-    <a href="Slope-Source-code-main/index.html">  
+<!-- Icono de usuario -->  
+<div id="userIcon" title="Usuario"></div>  
+
+<!-- Información del usuario -->  
+<div id="userInfo"></div>  
+
+<!-- Sección de juegos (oculta hasta login correcto) -->  
+<div id="gameGrid">  
+  <!-- Aquí se añaden los juegos -->  
+  <div class="game" onclick="alert('Navegar a Slope')">  
+    <a href="Slope-Source-code-main/index.html" target="_blank">  
       <img src="Slope-Source-code-main/TemplateData/OIP.ico" alt="Slope" />  
       <div class="game-title">Slope</div>  
     </a>  
   </div>  
-  <div class="game">  
+  <!-- Agrega aquí más juegos similares -->  
+  <div class="game" onclick="alert('Navegar a Backrooms')">  
+    <a href="backrooms/index.html" target="_blank">  
+      <img src="backrooms/img/icon.png" alt="Backrooms" />  
+      <div class="game-title">Backrooms</div>  
+    </a>  
+  </div>  
+ <div class="game">  
     <a href="backrooms/index.html">  
       <img src="backrooms/img/icon.png" alt="Backrooms" />  
       <div class="game-title">Backrooms</div>  
@@ -251,17 +318,79 @@
   </div>  
 </div>  
 
- <script>
-    function searchGames() {
-      const input = document.getElementById("searchInput").value.toLowerCase();
-      const games = document.querySelectorAll(".game");
-      games.forEach(game => {
-        const title = game.querySelector(".game-title").textContent.toLowerCase();
-        game.style.display = title.includes(input) ? "block" : "none";
-      });
-    }
-  </script>
+<!-- JavaScript -->  
+<script>  
+  // Datos de usuarios y claves  
+  const usuarios = {  
+    "admin": {  
+      clave: "1234",  
+      plan: "premium",  
+      caducidad: "2025-12-31"  
+    },  
+    "user1": {  
+      clave: "abc123",  
+      plan: "gratis",  
+      caducidad: "2025-06-15"  
+    }  
+  };  
 
-</body>
+  let usuarioActual = null;  
+
+  const loginBtn = document.getElementById("loginBtn");  
+  const userInput = document.getElementById("userInput");  
+  const keyInput = document.getElementById("keyInput");  
+  const loginMessage = document.getElementById("loginMessage");  
+  const authContainer = document.getElementById("authContainer");  
+  const gameGrid = document.getElementById("gameGrid");  
+  const userIcon = document.getElementById("userIcon");  
+  const userInfo = document.getElementById("userInfo");  
+
+  // Función para iniciar sesión  
+document.getElementById("loginBtn").onclick = () => {  
+  const user = userInput.value.trim();  
+  const key = keyInput.value.trim();  
+
+  if (usuarios[user] && usuarios[user].clave === key) {  
+    usuarioActual = {...usuarios[user], nombre: user};  
+    mostrarJuegos();  
+    mostrarIcono();  
+    authContainer.style.display = "none"; // ocultar login  
+    loginMessage.innerText = "";  
+  } else {  
+    loginMessage.innerText = "Usuario o clave incorrecta.";  
+  }  
+};  
+
+function mostrarJuegos() {  
+  gameGrid.style.display = "grid";  
+}  
+
+function mostrarIcono() {  
+  userIcon.innerHTML = "U"; // Podemos poner un ícono SVG o una imagen  
+}  
+
+// Evento click en icono de usuario  
+document.getElementById("userIcon").onclick = () => {  
+  if (!usuarioActual) return;  
+  // Mostrar info de caducidad  
+  const {plan, caducidad, nombre} = usuarioActual;  
+  const today = new Date().toISOString().slice(0,10);  
+  userInfo.innerHTML = `  
+    <strong>Usuario:</strong> ${nombre}<br>  
+    <strong>Plan:</strong> ${plan}<br>  
+    <strong>Cierre plan:</strong> ${caducidad}<br>  
+    <em>Hoy: ${today}</em>  
+  `;  
+  userInfo.style.display = userInfo.style.display === "block" ? "none" : "block";  
+};  
+
+// Cerrar info si clickea fuera  
+document.addEventListener("click", (e) => {  
+  if (!userInfo.contains(e.target) && e.target !== document.getElementById("userIcon")) {  
+    userInfo.style.display = "none";  
+  }  
+});  
+</script>  
+
+</body>  
 </html>
-
